--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/core": "^7.12.9",
     "expo": "~47.0.9",
     "expo-status-bar": "~1.4.2",
     "nativewind": "^2.0.11",
@@ -17,8 +18,10 @@
     "react-native-svg": "13.4.0",
     "react-native-swiper": "^1.6.0",
     "react-native-webview": "11.23.1",
+    "react-redux": "^8.0.5",
     "react-toggle-dark-mode": "^1.1.1",
-    "swiper": "^8.4.5"
+    "redux": "^4.2.0",
+    "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
